# pyrdfoo

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: python-package-docs.yml
docs/source/: conf.py  examples.rst  index.rst
docs/source/_templates/: module-template.rst
src/rdfoo/: dcat.py  dcatap.py  dcterms.py  foaf.py  rdf.py  rdfs.py  ssn.py  vcard.py  vliz.py
test/: rdfoo.py
