[project]
name = "rdfoo"
version = "0.1.2"
description = "Python classes implementing common RDF ontologies with type checking."
authors = [
    {name = "Jorge Mendes",email = "jorge.mendes@vliz.be"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rdflib (>=7.6.0,<8.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
]

[dependency-groups]
dev = [
    "pyright (>=1.1.408,<2.0.0)",
    "ruff (>=0.15.2,<0.16.0)",
    "sphinx (>=9.1.0,<10.0.0)",
    "sphinx-rtd-theme (>=3.1.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
